modify egaliatrianism detail

--- a/centralize/egalitarianism/egalitarianism.ipynb
+++ b/centralize/egalitarianism/egalitarianism.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc88abba",
+   "id": "a6188ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b3d476d",
+   "id": "096c918d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89480ef0",
+   "id": "12f0e2cb",
    "metadata": {},
    "outputs": [
     {
@@ -514,8 +514,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "25f15d07",
+   "execution_count": 4,
+   "id": "6f625920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,15 +543,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "4a59e459",
+   "execution_count": 5,
+   "id": "18e6b40e",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lolos\\AppData\\Local\\Temp/ipykernel_2384/619268500.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\lolos\\AppData\\Local\\Temp/ipykernel_5052/619268500.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -561,13 +561,15 @@
     }
    ],
    "source": [
-    "egalitarianism(sum(df_g.get_group(2020)['二氧化碳當量']), 2020).to_csv('egalitarianism_2020.csv', encoding = 'utf_8_sig')"
+    "with pd.ExcelWriter('egalitarianism.xlsx') as writer:\n",
+    "    for y in range(2014, 2021):\n",
+    "        egalitarianism(sum(df_g.get_group(y)['二氧化碳當量']), y).to_excel(writer, sheet_name = str(y), encoding = 'utf_8_sig')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae3a206b",
+   "id": "e4a8ac20",
    "metadata": {},
    "outputs": [],
    "source": []
