docs: results and data

--- a/CIT_CIIT/Second_try.ipynb
+++ b/CIT_CIIT/Second_try.ipynb
@@ -3197,7 +3197,7 @@
     "c = md11.addVar(vtype=GRB.CONTINUOUS, name='c') \n",
     "\n",
     "md11.setObjective(\n",
-    "    quicksum(_theta[r] * Y[j][r] for r in K for j in J) - c, GRB.MAXIMIZE\n",
+    "    quicksum(_theta[r] * Y[j][r] for r in K for j in J), GRB.MAXIMIZE\n",
     ")\n",
     "\n",
     "for r in K:\n",
@@ -3238,7 +3238,7 @@
     "    )\n",
     "\n",
     "md11.addConstr(\n",
-    "    quicksum(_delta[k] * B[0][k] for k in K) <=  sum(B[0]) * c\n",
+    "    quicksum(_delta[k] * B[0][k] for k in K) <=  sum(B[0])\n",
     ")\n",
     "\n",
     "# md11.params.LogToConsole = 0\n",
